--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -7,7 +7,10 @@ html(lang="en")
         title Document
         link(rel="stylesheet", href="./css/style.css")
     body
-        include header.pug
-        include content.pug
-        include footer.pug
-        include corasel.pug
+        include menu.pug
+        include welcome.pug
+        include background.pug
+        include ourteam.pug
+        include gallery.pug 
+        include form.pug
+        include footer.pug 
