.pug .scss update

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -23,6 +23,8 @@ body{
 @import './welcome.scss';
 //BACKGROUND DIV
 @import './background.scss';
+//OUR-TEAM
+@import './ourteam.scss'
 //GALLERY
 @import './gallery.scss';
 //FORM
