--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -24,7 +24,7 @@ body{
 //BACKGROUND DIV
 @import './background.scss';
 //OUR-TEAM
-@import './ourteam.scss'
+@import './ourteam.scss';
 //GALLERY
 @import './gallery.scss';
 //FORM
