Update divided files

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -23,10 +23,11 @@ body{
 @import './welcome.scss';
 //BACKGROUND DIV
 @import './background.scss';
+//BACKGROUND DIV
+@import './ourteam.scss';
 //GALLERY
 @import './gallery.scss';
 //FORM
 @import './form.scss';
 //FOOTER
 @import './footer.scss';
-
