renamed background.pug to about.pug and deleted ourteam.pub/scss

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -21,10 +21,8 @@ body{
 @import './menu.scss';
 //WELCOME BIG PICTURE
 @import './welcome.scss';
-//BACKGROUND DIV
-@import './background.scss';
-//OUR-TEAM
-@import './ourteam.scss';
+//ABOUT
+@import './about.scss';
 //GALLERY
 @import './gallery.scss';
 //FORM
