--- a/app/scss/menu.scss
+++ b/app/scss/menu.scss
@@ -34,6 +34,7 @@ header{
         display: inline-block;
         height: 39px;
         font-weight: 300;
+        line-height: 40px;
     }
     &__logo-text{
         text-decoration: none;
@@ -98,6 +99,7 @@ header{
         display: block;
         height: 42px;
         width: 100%;
+        
     }
 }
 
