--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -19,3 +19,4 @@ html(lang="en")
         include gallery.pug 
         include form.pug
         include footer.pug 
+        include button-on-top 
