--- a/app/pug/gallery.pug
+++ b/app/pug/gallery.pug
@@ -1,22 +1,20 @@
-doctype html
-| PASTE YOUR HTML CODE HERE
-head
-  title Pug
-  script(type='text/javascript').
-    if (foo) bar(1 + 5)
-h1 Pug - node template engine
-#container.col
-  p You are amazing
-  p Pug is a terse and simple templating language.
-head
-  meta(charset='UTF-8')
-  meta(http-equiv='X-UA-Compatible' content='IE=edge')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  link(rel='preconnect' href='https://fonts.googleapis.com')
-  link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
-  link(href='https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap' rel='stylesheet')
-  link(rel='stylesheet' href='./style.css')
-  title Document
+//- head
+//-   title Pug
+//-   script(type='text/javascript').
+//-     if (foo) bar(1 + 5)
+//- h1 Pug - node template engine
+//- #container.col
+//-   p You are amazing
+//-   p Pug is a terse and simple templating language.
+//- head
+//-   meta(charset='UTF-8')
+//-   meta(http-equiv='X-UA-Compatible' content='IE=edge')
+//-   meta(name='viewport' content='width=device-width, initial-scale=1.0')
+//-   link(rel='preconnect' href='https://fonts.googleapis.com')
+//-   link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
+//-   link(href='https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap' rel='stylesheet')
+//-   link(rel='stylesheet' href='./style.css')
+//-   title Document
 section.gallery
   .gallery__header
     h1.gallery__header__text GALLERY
